# ChangeLog for gnome-base/gdm
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-base/gdm/ChangeLog,v 1.417 2015/03/15 13:22:01 pacho Exp $

  15 Mar 2015; Pacho Ramos <pacho@gentoo.org> gdm-3.14.1-r1.ebuild:
  x86 stable, bug 534012

  14 Mar 2015; Pacho Ramos <pacho@gentoo.org> gdm-3.14.1-r1.ebuild:
  amd64 stable, bug 534012

*gdm-3.12.2-r2 (02 Jan 2015)
*gdm-3.14.1-r1 (02 Jan 2015)

  02 Jan 2015; Pacho Ramos <pacho@gentoo.org> +gdm-3.12.2-r2.ebuild,
  +gdm-3.14.1-r1.ebuild, -gdm-3.12.2-r1.ebuild, -gdm-3.14.1.ebuild:
  xinitrc.d file needs to be executable (#520550#c6 by Joakim Tjernlund)

*gdm-3.14.1 (22 Dec 2014)

  22 Dec 2014; Gilles Dartiguelongue <eva@gentoo.org> -gdm-3.12.2.ebuild,
  +gdm-3.14.1.ebuild, files/gdm-2.32.0-xinitrc-ssh-agent.patch,
  files/gdm-3.2.1.1-custom-session.patch,
  files/gdm-3.8.4-fingerprint-auth.patch, files/gdm-3.8.4-logo.patch:
  Version bump for Gnome 3.14. Clean up old revision.

  19 Dec 2014; Pacho Ramos <pacho@gentoo.org> gdm-3.12.2-r1.ebuild:
  amd64 stable, bug 529964

  18 Dec 2014; Pacho Ramos <pacho@gentoo.org> gdm-3.12.2-r1.ebuild:
  x86 stable, bug 529964

  13 Nov 2014; Pacho Ramos <pacho@gentoo.org> -files/49-keychain,
  -files/50-ssh-agent, -files/gdm-2.13.0.1-selinux-remove-attr.patch,
  -files/gdm-2.20.10-custom-session.patch,
  -files/gdm-2.20.10-desktop-session-dmrc-autologin.patch,
  -files/gdm-2.20.10-gdmsetup-24hr-combo.patch,
  -files/gdm-2.20.10-xinitrc-ssh-agent.patch,
  -files/gdm-2.20.11-underlinking.patch, -files/gdm-2.20.2-gksu.patch,
  -files/gdm-2.20.9-parallel-make.patch, -gdm-2.20.11-r1.ebuild, metadata.xml:
  Drop old (#508854)

  29 Sep 2014; Alexandre Rostovtsev <tetromino@gentoo.org> gdm-3.12.2.ebuild,
  gdm-3.12.2-r1.ebuild:
  Missing gdbus-codegen dependency (bug #524032, thanks to Kobboi).

*gdm-3.12.2-r1 (29 Sep 2014)

  29 Sep 2014; Pacho Ramos <pacho@gentoo.org>
  +files/gdm-3.12.2-SIGUSR1-blocking-1.patch,