@@ -11,15 +11,17 @@ AUX gdm-3.8.4-fingerprint-auth.patch 923 SHA256 7c256c4c93d959e1542d14fc2ff20f2f
 AUX gdm-3.8.4-logo.patch 805 SHA256 7381afcca38bdcf2d5c229bed61525a72350a95cadf3f09803615cd5158cb4bc SHA512 98dc0b01f4a4cbb87b32ec52450eb21f07bf96dc4d919cf662314c50fe0f2b1a19c90e3d8d2a0de905e8ada41642c0f89aa89dd640ead7e3d732468c9e363fb2 WHIRLPOOL 7ef489f1d989021257e87d8cacb711955d77c37ad8b9435ff2ef611b871ec7b76feb081e8ca910b3ede5dfb8a8846c10e595dd7eeae5a9018105b431175b9dfa
 DIST gdm-3.12.2.tar.xz 1522384 SHA256 cc91fff5afd2a7c3e712c960a0b60744774167dcfc16f486372e1eb3c0aa1cc4 SHA512 0c7f93fa12f1b2c4b6af71ea2767dc2b3367cc0330edfa106b1fe6c1ed6f112cc148f2319801bc44bc9ff6636d0b8cf5bd4be67999b48f1a7275c68ce9d5dbab WHIRLPOOL 3fd6ca8f53316a0cc167741b35a9ac402d00da12feae162c567e62d4b72cf63ef6f695725f7bc8a755c7c567daf0de0661bf8d96e22472da22fd6ba110880ed7
 DIST gdm-3.14.1.tar.xz 1503232 SHA256 ed83498131bcea69ce60f882783c669c24b007d2b7e1219b4bdde18f6c94deb1 SHA512 73a9490aec122b3240d2e6c0b106821c10635e55c1a5f2570771b2504007a4ca3172d1378e102bd42105514e702441d6baa6a5edfd30fc7bd5f85d2707e7d911 WHIRLPOOL 87f206199a45413979f8d198774d96dd897b4969e13acde0ff19aee189fc464f1cf0276888215b74cc9a7b1140f0161ec68191dd756bc344de76fdcc9d75771a
+DIST gdm-3.14.2.tar.xz 1490544 SHA256 e20eb61496161ad95b1058dbf8aea9b7b004df4d0ea6b0fab4401397d9db5930 SHA512 c9c0785a197da3313dc1879e325d5728ebec16934fa9adbe969beb09bea76666bcadfb3d1e9e56cfc614f553a2f23d258621463c0f97123a2b632c7d696dd866 WHIRLPOOL ba13de133df37c9858d01af43d551fa535921b656d31816e7bf4a45ffe11bea0c04adcef34d861e00a9071511fd737d0aa711036d1f5ac625fa3576d7008991c
 DIST tango-gentoo-v1.1.tar.gz 29322 SHA256 518efa4257c8e689488399db23397a89f4dcd5990ce537ef6215860ad5606eb0 SHA512 87d47ddab68361db6d99866c51705dcb3e198f8345a1096859acf2c6cca5099dd23c7fb30d124f52c4933ea38fd45fadffbbe6ecbdfa84f5b60938a4824f9045 WHIRLPOOL 9e1635a505ea48f4fe8bdb3b8b3b43cfb9cf99e3204194c51361b198886e719921cfacbc15f9f6407aa7d0c4af178e24c74b998fc370fa2329040e5be1baf153
 EBUILD gdm-3.12.2-r2.ebuild 6682 SHA256 dcdead29e4ccf5a6674e08225349487e157f5f0c577db6b4957d6a03797b1f03 SHA512 9a14a11028d8e23cee3c5e1b3aaecaf4b29acabad44df17a7dc4d1493a7c0a51e7ce3baaa9ab30e496943eff90f4f96b588580b1c1ffcf3ceaaac48a65fe48c2 WHIRLPOOL 5673b3f9a3467865ad12d255c0b7523f5b23f6ca2d702f1d7a9becbf4c319fdcdaad84be86e32ba79d6a5961ded856354da9aa392c0759197371605f228f2eb3
 EBUILD gdm-3.14.1-r1.ebuild 6566 SHA256 89d126890b01359a1b3de04bfce70b278211c9fad0ff6ef592fbb54898f9087c SHA512 56e55d6cc51fcc3b7783cefdcc45625226b1f0b8f5e7242ac3dc43ea13365febe0b05b6980a54ad3b6cc99137c457fc4a994258802ceb474395082d7ed07d788 WHIRLPOOL d1794c77fcdc086c9e3de89728da50824732236338ef23a5867dd0e982a30ded61d17da50b68a796fb4051275319b50f099bba121efbb0e77a308d24b9ffa95b
-MISC ChangeLog 64373 SHA256 fd19aaafcfdedac52269633cb91d4037bd26e7009eb5eae023ea316fea1797ff SHA512 f32efe8185f1bdfadf4a673a0bce849e288e1ce0a3bc88af333185692d1b9d63f101556991b0329a50944ec9343df9fad874067ded0f0ded093eb3807fce572d WHIRLPOOL 46b3ef2e4d5656b44a3ed022208a605e83c898389de73c88e40b892bf556003200453bf5648d97f1516cdd0781d2e33d41f7c1f033bfbb27d9e8a1a7490c04a2
+EBUILD gdm-3.14.2.ebuild 6563 SHA256 a0d4f334dd164a618f32eaa12e163d878c158546b808f54abbcf6e1af2dd10c4 SHA512 0f29bbdf9951afd825a5b743e3a1e5299033f535b52974d50ae635affa7bc27a1091d63d88840bf2a5bf7613b95a1cac9627d4e6189c558464dd7ac9a9b06f73 WHIRLPOOL 324c8b5f4c00a0120f92280b5c962bfd8bf72b76ab6c78621e80f6944ef117369f239633be16b2934462269ed408de2fb9e64800dcf1c91e71faecf3e9be32b9
+MISC ChangeLog 64489 SHA256 ce8ba402ed3c62d7b41fb184a56485fe90563c9bdb68805e77c88c559c807f4f SHA512 fead67e8f9a54df70e7a025582c831a42caf03c25fac531df6fed0d72195d8a3fc2d318bbc6dec01eefc074ffdf82d8197a7999e3b14cf959a8540e3ceeed13d WHIRLPOOL 5c36e2e7528cdaaf968feb9f7d0263edc24916ab2ab178ba0886c7edfd1b9cf789cb7a1237dff7eb468aaadee172938558280a5a7f0402f38baa22b61ae280cd
 MISC metadata.xml 461 SHA256 40f9beae7d9944963e2c6d06b81770cddd7e349b48241b9fa49ad51fe926fd94 SHA512 b0a72a33e823f76f562dec12cdbb31d989f7c384111f3a55d0afb04ede80494adc5565c0479b0056912db730919b0bba0a84ed07c9a100817b0c2bb33ed7bfb7 WHIRLPOOL 01c6db8b57ea1bb8fa7c66e0f7ae44400a5a874ec11af22ea8499b7abbf896582dbe7b8b4b3b1210475b15d39d677ddff0fc1ec5023c864fc1256948ce400434
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlUFh2wACgkQCaWpQKGI+9STTACfcf464gKlL8DMgIhOP8zZFSDd
-wosAn3zoijtQQ4YfWI74VbTNupTxmcmb
-=xWwx
+iEYEAREIAAYFAlUzuogACgkQ1fmVwcYIWAYqjgCgkcTQuchZ2i3AVNAAAafHM78D
+4iAAn1/P2YhsqMCdwUbGuhC9mZc/FbKj
+=JbjO
 -----END PGP SIGNATURE-----
