@@ -1,0 +1,14 @@
+DEFINED_PHASES=compile configure install postinst postrm preinst prepare setup unpack
+DEPEND=app-text/iso-codes >=dev-libs/glib-2.36:2 >=x11-libs/gtk+-2.91.1:3 >=gnome-base/dconf-0.20 >=gnome-base/gnome-settings-daemon-3.1.4 gnome-base/gsettings-desktop-schemas >=media-libs/fontconfig-2.5.0 >=media-libs/libcanberra-0.4[gtk3] sys-apps/dbus >=sys-apps/accountsservice-0.6.12 x11-apps/sessreg x11-base/xorg-server x11-libs/libXi x11-libs/libXau x11-libs/libX11 x11-libs/libXdmcp x11-libs/libXext x11-libs/libXft x11-libs/libXrandr >=x11-misc/xdg-utils-1.0.2-r3 virtual/pam systemd? ( >=sys-apps/systemd-186:0=[pam] ) !systemd? ( >=x11-base/xorg-server-1.14.3-r1 >=sys-auth/consolekit-0.4.5_p20120320-r2 !<sys-apps/openrc-0.12 ) sys-auth/pambase[systemd?] audit? ( sys-process/audit ) introspection? ( >=dev-libs/gobject-introspection-0.9.12 ) plymouth? ( sys-boot/plymouth ) selinux? ( sys-libs/libselinux ) tcpd? ( >=sys-apps/tcp-wrappers-7.6 ) xinerama? ( x11-libs/libXinerama ) app-text/docbook-xml-dtd:4.1.2 dev-util/gdbus-codegen >=dev-util/intltool-0.40.0 virtual/pkgconfig x11-proto/inputproto x11-proto/randrproto test? ( >=dev-libs/check-0.9.4 ) xinerama? ( x11-proto/xineramaproto ) !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.15:1.15 ) >=sys-devel/autoconf-2.69 >=sys-devel/libtool-2.4 app-arch/xz-utils >=sys-apps/sed-4 virtual/pkgconfig
+DESCRIPTION=GNOME Display Manager for managing graphical display servers and user logins
+EAPI=5
+HOMEPAGE=https://wiki.gnome.org/Projects/GDM
+IUSE=accessibility audit branding fprint +introspection ipv6 plymouth selinux smartcard +systemd tcpd test wayland xinerama debug
+KEYWORDS=~alpha ~amd64 ~arm ~ia64 ~ppc ~ppc64 ~sh ~sparc ~x86
+LICENSE=GPL-2+ branding? ( CC-Sampling-Plus-1.0 )
+RDEPEND=app-text/iso-codes >=dev-libs/glib-2.36:2 >=x11-libs/gtk+-2.91.1:3 >=gnome-base/dconf-0.20 >=gnome-base/gnome-settings-daemon-3.1.4 gnome-base/gsettings-desktop-schemas >=media-libs/fontconfig-2.5.0 >=media-libs/libcanberra-0.4[gtk3] sys-apps/dbus >=sys-apps/accountsservice-0.6.12 x11-apps/sessreg x11-base/xorg-server x11-libs/libXi x11-libs/libXau x11-libs/libX11 x11-libs/libXdmcp x11-libs/libXext x11-libs/libXft x11-libs/libXrandr >=x11-misc/xdg-utils-1.0.2-r3 virtual/pam systemd? ( >=sys-apps/systemd-186:0=[pam] ) !systemd? ( >=x11-base/xorg-server-1.14.3-r1 >=sys-auth/consolekit-0.4.5_p20120320-r2 !<sys-apps/openrc-0.12 ) sys-auth/pambase[systemd?] audit? ( sys-process/audit ) introspection? ( >=dev-libs/gobject-introspection-0.9.12 ) plymouth? ( sys-boot/plymouth ) selinux? ( sys-libs/libselinux ) tcpd? ( >=sys-apps/tcp-wrappers-7.6 ) xinerama? ( x11-libs/libXinerama ) >=gnome-base/gnome-session-3.6 >=gnome-base/gnome-shell-3.1.90 gnome-extra/polkit-gnome:0 x11-apps/xhost x11-themes/gnome-icon-theme-symbolic accessibility? ( >=app-accessibility/orca-3.10 app-accessibility/caribou gnome-extra/mousetweaks ) fprint? ( sys-auth/fprintd sys-auth/pam_fprint ) !gnome-extra/fast-user-switch-applet
+REQUIRED_USE=wayland? ( systemd )
+SLOT=0
+SRC_URI=mirror://gnome/sources/gdm/3.14/gdm-3.14.2.tar.xz branding? ( http://www.mail-archive.com/tango-artists@lists.freedesktop.org/msg00043/tango-gentoo-v1.1.tar.gz )
+_eclasses_=autotools	999c8f6cf5d91495cb0779588f20716c	eutils	9fb270e417e0e83d64ca52586c4a79de	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	flag-o-matic	c263990f1b677b0f0be0a3299f179762	gnome.org	8fef8f967214f56e08fa92d61163d891	gnome2	10c513def52488230abb60a4b19a03b9	gnome2-utils	5cdfd22a2163c9d3a891648bd19453a7	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	pam	aa1ebb3ab720ea04dbbdd6eaaf9554ed	readme.gentoo	106edea5533517715013de909a333abd	systemd	090342761f573a8280dd5aa6b0345f3b	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92	user	f54e098dd38ba1c0847a13e685b87747	versionator	cd0bcdb170807e4a1984115e9d53a26f
+_md5_=9682481752f8cf48ebcb46987c37d8fd
