@@ -1,6 +1,11 @@
 # ChangeLog for gnome-base/gdm
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/gdm/ChangeLog,v 1.417 2015/03/15 13:22:01 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/gdm/ChangeLog,v 1.418 2015/04/19 14:24:07 eva Exp $
+
+*gdm-3.14.2 (19 Apr 2015)
+
+  19 Apr 2015; Gilles Dartiguelongue <eva@gentoo.org> +gdm-3.14.2.ebuild:
+  Version bump.
 
   15 Mar 2015; Pacho Ramos <pacho@gentoo.org> gdm-3.14.1-r1.ebuild:
   x86 stable, bug 534012
